replace clazz.newInstance() - is deprecated - with
clazz.getDeclaredConstructor().newInstance()